--- a/index.html
+++ b/index.html
@@ -141,47 +141,17 @@
 	    </div>
 	    </div>
 	    <div class="y"  id="y"><iframe width="600" height="310" marginwidth="400px" src="https://www.youtube.com/embed/-svNcCKLQlU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-	    .end{
-	width: 90%;
-	height: 30vh;
-	background-color: black;
-	margin: auto;
-
-}
-.end  p {
-	text-align: center;
-	color: white;
-	font-size: 130%;
-	font-weight: bold;
-	line-height: 40px;
-	
-	
-
-}
-.end  p i{
-	color: yellow;
-}
-.end img{
-
-	width: 30%;
-	height: 25%;
-	padding: auto;
-}
-.end p a{
-	text-align: center;
-	text-decoration: none;
-	color: yellow;
-	display: block;
-
-}
-.end a i{
-	color: yellow;
-	font-size: 180%;
-}
-.end p a:hover{
-	color: white;
-	
-}
+	    <div class="end">
+	    	<p>
+	    		MỌI CHI TIẾT XIN LIÊN HỆ :
+	    	</p>
+	    	<p><a href="https://www.facebook.com/profile.php?id=100029013491954">
+	    	<i class="fab fa-facebook"></i> FB : Lưu Văn Huy
+	    	</a></p>
+	    	<p><i class="fas fa-envelope-square" id="email"> : luuhuy1221@gmail.com</i></p>
+	    	<p><i class="fas fa-phone">:0972049518</i></p>
+	    	
+	    </div>
 
 
     
